deploys/oj/k3s-cuhk/common/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oj-server-network-policy
spec:
  podSelector:
    matchLabels:
      app: oj-server
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - port: http
      protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: oj-db
    ports:
    - port: mariadb
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: oj-c99runner
    ports:
    - port: oj-runner
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: dns
      protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oj-judge-network-policy
spec:
  podSelector:
    matchLabels:
      app: oj-judge
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: oj-db
    ports:
    - port: mariadb
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: oj-c99runner
    ports:
    - port: oj-runner
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: dns
      protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oj-db-network-policy
spec:
  podSelector:
    matchLabels:
      app: oj-db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - oj-server
          - oj-judge
          - oj-adminer
    ports:
    - port: mariadb
      protocol: TCP
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oj-adminer-network-policy
spec:
  podSelector:
    matchLabels:
      app: oj-adminer
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - port: http
      protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: oj-db
    ports:
    - port: mariadb
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: dns
      protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oj-filebrowser-network-policy
spec:
  podSelector:
    matchLabels:
      app: oj-filebrowser
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - port: http
      protocol: TCP
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oj-c99runner-network-policy
spec:
  podSelector:
    matchLabels:
      app: oj-c99runner
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - oj-judge
          - oj-server
    ports:
    - port: ci-runner
      protocol: TCP
  egress: []
